added content and changed layout

--- a/css/default.css
+++ b/css/default.css
@@ -147,7 +147,9 @@ body {
    font-weight: normal;
    font-size: 15px;
    line-height: 30px;
-	color: #838C95;
+   /* color: #838C95; */
+   /* color: #757575; */
+   color: #6e6e6e;
 
    -webkit-font-smoothing: antialiased; /* Fix for webkit rendering */
 	-webkit-text-size-adjust: 100%;
@@ -288,7 +290,7 @@ hr { border: solid #E3E3E3; border-width: 1px 0 0; clear: both; margin: 11px 0 3
 a, a:visited {
    text-decoration: none;
    outline: 0;
-   color: #11ABB0;
+   color: #F06000;
 
    -webkit-transition: color .3s ease-in-out;
    -moz-transition: color .3s ease-in-out;
@@ -349,7 +351,7 @@ li p { }
    color: #313131;
 }
 .stats-tabs li a:hover {
-   color:#11ABB0;
+   color:#F06000;
 }
 .stats-tabs li a b {
 	display: block;
@@ -361,7 +363,7 @@ li p { }
 
 /* definition list */
 dl { margin: 12px 0; }
-dt { margin: 0; color:#11ABB0; }
+dt { margin: 0; color:#F06000; }
 dd { margin: 0 0 0 20px; }
 
 /* Lining Definition Style Markup */
@@ -436,7 +438,7 @@ dd { margin: 0 0 0 20px; }
 }
 .pagination .current,
 .pagination .current:hover {
-   background-color: #11ABB0;
+   background-color: #F06000;
    color: #fff;
 }
 .pagination .inactive,
@@ -464,7 +466,7 @@ input[type="submit"],
 input[type="reset"],
 input[type="button"] {
    font: 16px/30px 'opensans-bold', sans-serif;
-   background: #11ABB0;
+   background: #F06000;
    display: inline-block;
 	text-decoration: none;
    letter-spacing: 0;
@@ -802,6 +804,34 @@ properly.
 	text-align: center !important;
 }
 
+/**
+ * custom css
+ * ------------------------------------------------------------------- 
+ */
+ .justify-txt {
+	text-align: justify !important;
+}
 
+.chip {
+	display: inline-block;
+	padding: 0 25px;
+	height: 40px;
+	/* font-size: 16px; */
+	font-size: 11px;
+	line-height: 40px;
+	border-radius: 5px;
+	background-color: #313131;
+	/* color: #ad0000; */
+	color: white;
+	margin-bottom: 1%;
+}
+
+.chip:hover {
+   background: #F06000;
+}
+
+.bold-text {
+	font-weight: bold;
+}
 
 
